--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -3,3 +3,33 @@
 @tailwind components;
 
 @tailwind utilities;
+
+.pubsrc {
+    font-style: italic;
+    font-weight: 300;
+    margin-top: 1rem;
+}
+
+.ref {
+    color: #000080;
+    font-weight: 700;
+}
+
+.cvulist {
+    margin-top: 0.5rem;
+    margin-left: 1rem;
+    list-style-type: disc;
+}
+
+.cvli {
+    padding: 0.5rem;
+}
+
+.cvheaderli {
+    font-weight: 700;
+}
+
+.cvheaderABC {
+    margin-top: 1rem;
+    font-weight: 700;
+}
