CVGerman plusminus buttons

--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -33,3 +33,9 @@
     margin-top: 1rem;
     font-weight: 700;
 }
+
+.cvplusminus {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
