--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -4,12 +4,14 @@
 
 @tailwind utilities;
 
+/*Used in CVGerman / CVEnglish / Pubxyz*/
 .pubsrc {
     font-style: italic;
     font-weight: 300;
     margin-top: 1rem;
 }
 
+/*Used in CVGerman / Pubxyz*/
 .ref {
     color: #000080;
     font-weight: 700;
