--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -43,3 +43,10 @@
     align-items: center;
     justify-content: center;
 }
+
+.imgBorder {
+    --border-opacity: 1;
+    border-color: #3c366b;
+    border-color: rgba(60, 54, 107, var(--border-opacity));
+    border-width: 4px;
+}
