--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -54,10 +54,15 @@
 }
 
 .lectures {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-family: 'Satisfy', cursive;
     font-size: 2.25rem;
+    font-weight: 600;
     text-decoration: underline;
     margin-bottom: 1rem;
+    cursor: pointer;
 }
 
 .body {
