finished learnmobile and some css finetuning

--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -39,7 +39,7 @@
     text-decoration: underline;
 }
 
-/*Used in CV / Lectures / */
+/*Lectures / */
 .plusminus {
     display: flex;
     align-items: center;
